add Readme.md; edit SpringConfig.java; add @NotBlank annotations;move @NonNull annotation to proper place and more bugfixes